paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/compound_literals_7/sample_004/target.compile.log
error[E0432]: unresolved import `lazy_static`
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/compound_literals_7/sample_004/target.rs:1:5
  |
1 | use lazy_static::lazy_static;
  |     ^^^^^^^^^^^ use of unresolved module or unlinked crate `lazy_static`
  |
help: you might be missing a crate named `lazy_static`, add it to your project and import it in your code
  |
1 + extern crate lazy_static;
  |

error[E0425]: cannot find value `ENDLESS_ZEROS` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/compound_literals_7/sample_004/target.rs:21:29
   |
21 |     if !Rc::ptr_eq(&x.cdr, &ENDLESS_ZEROS) {
   |                             ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `ENDLESS_ZEROS` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/compound_literals_7/sample_004/target.rs:24:33
   |
24 |     if !Rc::ptr_eq(&x.cdr.cdr, &ENDLESS_ZEROS) {
   |                                 ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `ENDLESS_ZEROS` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/compound_literals_7/sample_004/target.rs:31:29
   |
31 |     std::process::exit(eval(ENDLESS_ZEROS.clone()));
   |                             ^^^^^^^^^^^^^ not found in this scope

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0425, E0432.
For more information about an error, try `rustc --explain E0425`.